W-14202319: Configure required opens in each service instead of having (#2178) (#2191)